# logid

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: error.rs  lib.rs  main.rs
src/auth/: manager.rs  mod.rs  multi_region.rs
src/commands/: update.rs
src/config/: env.rs  filter.rs  jwt.rs  mod.rs  region.rs
src/log_query/: client.rs  mod.rs  multi_region.rs  types.rs
src/output/: format.rs  formatter.rs  mod.rs  utils.rs
