[package]
name = "logid"
version = "0.1.2"
edition = "2021"
authors = ["bytedance"]
description = "基于 Rust 的 logid 查询工具，支持多区域日志查询"

[lib]
name = "logid"
path = "src/lib.rs"

[[bin]]
name = "logid"
path = "src/main.rs"

[dependencies]
# CLI 命令行参数解析
clap = { version = "4.4", features = ["derive"] }

# HTTP 客户端 (使用 rustls 避免依赖 OpenSSL，便于 musl 静态编译)
reqwest = { version = "0.11", default-features = false, features = ["json", "cookies", "rustls-tls"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 环境变量加载
dotenvy = "0.15"

# JSON 处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 正则表达式
regex = "1.10"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 文件路径处理
path-absolutize = "3.1"

# 用户目录处理
dirs = "5.0"

# 更新功能相关
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
sha2 = "0.10"

[dev-dependencies]
# 测试
tempfile = "3.8"
mockito = "1.2"